tests/invalid/undefined_function/main.py
def run_case() -> None:
    x: int = foo(42)

if __name__ == "__main__":
    run_case()
